@@ -7,7 +7,6 @@ lib/Socialtext/Resting/Utils.pm
 lib/Socialtext/Resting/Mock.pm
 Makefile.PL
 MANIFEST
-META.yml
 README
 t/00-load.t
 t/default-rester.t
